--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "lodash": "^4.17.21",
     "chokidar": "^3.5.3",
     "fast-glob": "^3.2.12",
-    "vituum": "^1.0.0-alpha.13",
-    "@vituum/vite-plugin-liquid": "^1.0.0-alpha.3",
+    "vituum": "^1.0.0-alpha.15",
+    "@vituum/vite-plugin-liquid": "^1.0.0-alpha.6",
+    "@vituum/vite-plugin-twig": "^1.0.0-alpha.1",
     "@vituum/vite-plugin-juice": "^0.1.8",
     "eslint-config-standard": "^17.1.0"
   }
